# china-stock-mcp

./: .gitignore  Dockerfile  README.md  README_zh.md  debug.bat  debug.sh  main.py  pyproject.toml  requirements.txt  smithery.yaml
docs/: akshare_stock_api.md  v0.1-release-notes.md
src/akshare_one_mcp/: __main__.py  server.py
src/china-stock-mcp/: __main__.py
src/china_stock_mcp/: __main__.py  cache_utils.py  server.py
