[project]
name = "akshare-one-mcp"
version = "0.1.4"
description = "MCP server that provides access to Chinese stock market data using akshare-one"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "zwldarren", email = "zwldarren@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.16.98",
    "akshare-one>=0.2.2",
    "fastmcp>=2.7.0",
]
keywords = ["akshare", "stock", "mcp", "mcp-server"]

[project.urls]
Homepage = "https://github.com/zwldarren/akshare-one-mcp"
Repository = "https://github.com/zwldarren/akshare-one-mcp.git"

[project.scripts]
akshare-one-mcp = "akshare_one_mcp.__main__:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
