[project]
name = "china-stock-mcp"
version = "0.1.9"
description = "MCP server that provides access to Chinese stock market data using akshare"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "postback", email = "ssf@foxmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "akshare-one>=0.3.10",
    "fastmcp>=2.11.3",
    "uvicorn>=0.35.0",
]
keywords = ["akshare", "stock", "mcp", "mcp-server"]

[project.urls]
Homepage = "https://github.com/xinkuang/china-stock-mcp"
Repository = "https://github.com/xinkuang/china-stock-mcp.git"

[project.scripts]
china-stock-mcp = "china_stock_mcp.__main__:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
